Fix post route
